<resources>
    <string name="app_name">ResponsiveUI</string>
    <string name="space_stations">Space Stations</string>
    <string name="rovers">Rovers</string>
    <string name="flights">Flights</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="dca">DCA</string>
    <string name="mars">MARS</string>
    <string name="traveller">1 Traveller</string>
    <string name="depart">Depart</string>
    <string name="activity_intergalactic_travel_service">Intergalactic Travel Service</string>
    <string name="activity_dimension">Move to DimensionActivity</string>
    <string name="activity_one">Intro One</string>
    <string name="activity_two">Intro Two</string>
    <string name="activity_three">Intro Three</string>

    <string name="warehouse">Large</string>
    <string name="hospital">Nhan Dan 115</string>
    <string name="content">A hospital is a health care institution providing patient treatment with specialized medical and nursing staff and medical equipment.[1] The best-known type of hospital is the general hospital, which typically has an emergency department to treat urgent health problems ranging from fire and accident victims to a sudden illness. A district hospital typically is the major health care facility in its region, with many beds for intensive care and additional beds for patients who need long-term care. Specialized hospitals include trauma centers, rehabilitation hospitals, childrenA hospital is a health care institution providing patient treatment with specialized medical and nursing staff and medical equipment.[1] The best-known type of hospital is the general hospital, which typically has an emergency department to treat urgent health problems ranging from fire and accident victims to a sudden illness. A district hospital typically is the major health care facility in its region, with many beds for intensive care and additional beds for patients who need long-term care. Specialized hospitals include trauma centers, rehabilitation hospitals, childrenA hospital is a health care institution providing patient treatment with specialized medical and nursing staff and medical equipment.[1] The best-known type of hospital is the general hospital, which typically has an emergency department to treat urgent health problems ranging from fire and accident victims to a sudden illness. A district hospital typically is the major health care facility in its region, with many beds for intensive care and additional beds for patients who need long-term care. Specialized hospitals include trauma centers, rehabilitation hospitals, childrenA hospital is a health care institution providing </string>
</resources>
