<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconOne"
        android:layout_width="@dimen/default_icon_size_x"
        android:layout_height="@dimen/default_icon_size_x"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        app:layout_constraintEnd_toStartOf="@+id/iconTwo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/space_station_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconTwo"
        android:layout_width="@dimen/default_icon_size_x"
        android:layout_height="@dimen/default_icon_size_x"
        app:layout_constraintBottom_toBottomOf="@+id/iconOne"
        app:layout_constraintEnd_toStartOf="@+id/iconThree"
        app:layout_constraintStart_toEndOf="@+id/iconOne"
        app:layout_constraintTop_toTopOf="@+id/iconOne"
        app:srcCompat="@drawable/rocket_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconThree"
        android:layout_width="@dimen/default_icon_size_x"
        android:layout_height="@dimen/default_icon_size_x"
        app:layout_constraintBottom_toBottomOf="@+id/iconTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconTwo"
        app:layout_constraintTop_toTopOf="@+id/iconTwo"
        app:srcCompat="@drawable/rover_icon" />

    <TextView
        android:id="@+id/tvOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        android:text="@string/space_stations"
        app:layout_constraintEnd_toEndOf="@+id/iconOne"
        app:layout_constraintStart_toStartOf="@+id/iconOne"
        app:layout_constraintTop_toBottomOf="@+id/iconOne" />

    <TextView
        android:id="@+id/tvThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        android:text="@string/rovers"
        app:layout_constraintEnd_toEndOf="@+id/iconThree"
        app:layout_constraintStart_toStartOf="@+id/iconThree"
        app:layout_constraintTop_toBottomOf="@+id/iconThree" />

    <TextView
        android:id="@+id/tvFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        android:text="@string/flights"
        app:layout_constraintEnd_toEndOf="@+id/iconTwo"
        app:layout_constraintStart_toStartOf="@+id/iconTwo"
        app:layout_constraintTop_toBottomOf="@+id/iconTwo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="124dp"
        android:layout_height="98dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/default_padding_margin_xxxxh"
        android:layout_marginRight="@dimen/default_padding_margin_xxxxh"
        android:layout_toStartOf="@id/doubleArrowsIcon"
        android:layout_toLeftOf="@id/doubleArrowsIcon"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/dca"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/doubleArrowsIcon"
        app:layout_constraintEnd_toEndOf="@id/doubleArrowsIcon"
        app:layout_constraintTop_toTopOf="@id/doubleArrowsIcon"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="124dp"
        android:layout_height="98dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/default_padding_margin_xxxh"
        android:layout_marginLeft="@dimen/default_padding_margin_xxxh"
        android:background="@color/colorPrimary"
        android:layout_toEndOf="@id/doubleArrowsIcon"
        android:gravity="center"
        android:text="@string/mars"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@id/doubleArrowsIcon"
        app:layout_constraintTop_toTopOf="@id/doubleArrowsIcon"
        app:layout_constraintBottom_toBottomOf="@id/doubleArrowsIcon"
        app:layout_constraintStart_toStartOf="@id/doubleArrowsIcon"
        />

    <ImageView
        android:id="@+id/doubleArrowsIcon"
        android:layout_width="@dimen/default_icon_size_xxx"
        android:layout_height="@dimen/default_icon_size_xxx"
        android:layout_centerInParent="true"
        android:src="@drawable/double_arrows"
        android:layout_marginBottom="@dimen/default_padding_margin_xxxx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOne"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="210dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:checked="false"
        android:switchPadding="24dp"
        android:text="@string/one_way"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/guidelineTwo"
        app:layout_constraintTop_toBottomOf="@+id/guidelineOne"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch1"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/traveller"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="@+id/guidelineTwo"
        />

    <ImageView
        android:id="@+id/galaxyIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/galaxy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineOne"
        />

    <ImageView
        android:id="@+id/rocketIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/rocket_icon"
        app:layout_constraintCircle="@id/galaxyIcon"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="100dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/departButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/depart"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>