<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconOne"
        android:layout_width="@dimen/default_icon_size_x"
        android:layout_height="@dimen/default_icon_size_x"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        app:layout_constraintEnd_toStartOf="@+id/iconTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:srcCompat="@drawable/space_station_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconTwo"
        android:layout_width="@dimen/default_icon_size_x"
        android:layout_height="@dimen/default_icon_size_x"
        app:layout_constraintEnd_toStartOf="@+id/iconThree"
        app:layout_constraintStart_toEndOf="@+id/iconOne"
        app:layout_constraintBottom_toBottomOf="@+id/iconOne"
        app:layout_constraintTop_toTopOf="@+id/iconOne"
        app:srcCompat="@drawable/rocket_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconThree"
        android:layout_width="@dimen/default_icon_size_x"
        android:layout_height="@dimen/default_icon_size_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconTwo"
        app:layout_constraintBottom_toBottomOf="@+id/iconTwo"
        app:layout_constraintTop_toTopOf="@+id/iconTwo"
        app:srcCompat="@drawable/rover_icon" />

    <TextView
        android:id="@+id/tvOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space_stations"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        app:layout_constraintTop_toBottomOf="@+id/iconOne"
        app:layout_constraintEnd_toEndOf="@+id/iconOne"
        app:layout_constraintStart_toStartOf="@+id/iconOne"
        />

    <TextView
        android:id="@+id/tvThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rovers"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        app:layout_constraintTop_toBottomOf="@+id/iconThree"
        app:layout_constraintEnd_toEndOf="@+id/iconThree"
        app:layout_constraintStart_toStartOf="@+id/iconThree"
        />

    <TextView
        android:id="@+id/tvFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flights"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        app:layout_constraintTop_toBottomOf="@+id/iconTwo"
        app:layout_constraintEnd_toEndOf="@+id/iconTwo"
        app:layout_constraintStart_toStartOf="@+id/iconTwo"
        />
</androidx.constraintlayout.widget.ConstraintLayout>